--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "expo": "^30.0.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
-  }
+  },
+
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.7.1"
+  },
+  "plugins": ["babel-plugin-styled-components"]
 }
